# tokensmash

./: .gitignore  LICENSE  PROTOCOL.md  PROTOCOL.template.md  README.md  pyproject.toml
docs/: CONTRACTS.md  benchmark-design.md  replication.md  session-privacy.md  study-architecture.md
reports/: README.md
results/: README.md
src/tokensmash/: __init__.py  cli.py  ingest.py  meta.py  opportunity.py  otelcheck.py  pricing.py  replay.py  schema.py  store.py  trajectory.py
src/tokensmash/data/pricing/: anthropic-api-2026-06.json  codex-credits-2026-06.json  openai-api-2026-06.json
src/tokensmash/data/suites/generic/: tool-comparison.json
src/tokensmash/data/tools/: headroom.json
src/tokensmash/sessions/: claude.py  codex.py
src/tokensmash/study/: analyze.py  assign.py  launchctl.py  link.py  power.py
suites/generic/: tool-comparison.json
tasks/: README.md
tests/: test_bench_audit.py  test_eval_sessions.py  test_ingest.py  test_ingest_identity.py  test_launchctl.py  test_meta.py  test_opportunity.py  test_otelcheck.py  test_pricing.py  test_replay.py  test_sessions_claude.py  test_sessions_codex.py  test_store.py  test_study_analyze.py  test_study_arm.py  test_study_assign.py  test_study_link.py  test_study_power.py  test_trajectory.py
tests/fixtures/replay/: fake_reducer.sh
